# qdrant-case

./: .gitignore  __init__.py  constants.py  main.py  poem_sentiment.py  pyproject.toml  qdrant_embedding.py  qdrant_search.py  qdrant_utils.py  requirements.txt  text_preprocessing.py
