[tool.poetry]
name = "poem-sentiment-search"
version = "0.1.0"
description = "A project for poem sentiment analysis and vector search"
authors = ["betul feyza <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10.2"
datasets = "^2.14.0"
pandas = "^2.1.0"
nltk = "^3.8.1"
textblob = "^0.17.1"
qdrant-client = "^1.6.0"
sentence-transformers = "^2.2.2"
pydantic = "^2.3.0"
loguru = "^0.7.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
flake8 = "^6.1.0"
black = "^23.7.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = "E203, W503"
max-complexity = 10